[추가] 모달 추가

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="StyleSheet" href="css/style.css" />
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="render"></div>
-    <script type="module" src="script/script.js"></script>
+    <form class="searchContainer">
+        <input class="searchInput" placeholder="검색어를 입력하세요" type="text" />
+    </form>
+    <div class="cardContainer"></div>
+    <div class="modalContainer"></div>
+    <script src="script.js"></script>
 </body>
 </html>
