--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Saira&display=swap" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
-</head>
-<body>
+  </head>
+  <body>
     <form class="searchContainer">
-        <input class="searchInput" placeholder="검색어를 입력하세요" type="text" />
+      <input class="searchInput" placeholder="검색어를 입력하세요" type="text" />
     </form>
     <div class="cardContainer"></div>
     <div class="modalContainer"></div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
